Graph.java klases addNodes metodes gājienu noteicošo darbību izmaiņa. Heiristiskā vērtējuma nomaiņa. Kad sāk spēli, tagad bestEndNode mainīgajam Game.java klasē piešķir null, lai atkārtotas spēles gadījumā nemestu kļūdu.